# allykit

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/Security_examples/: security_kit_complete_demo.py
examples/Security_examples/file/: file_kit_demo.py  file_kit_quick_reference.py
examples/Security_examples/hash/: hash_kit_demo.py  hash_kit_quick_reference.py
examples/Security_examples/password/: password_kit_demo.py  quick_reference.py
examples/automobile_examples/: automobile_demo.py  automobile_quick_reference.py
examples/data_examples/: language_geography_demo.py  quick_reference_language_geo.py
examples/web_examples/: cookie_web.py  web_kit_demo.py  web_quick_reference.py
src/allykit/: __init__.py
src/allykit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/allykit/Automobile_kit/: __init__.py
src/allykit/Automobile_kit/Automobile/: Cmd.py  __init__.py  hybrid.py  powerShell.py
src/allykit/Automobile_kit/New_automobile/: file.py  git.py  python.py
src/allykit/Automobile_kit/ProcessManager/: ProcessManager.py  __init__.py
src/allykit/Security_kit/: __init__.py  file_kit.py  hash_kit.py
src/allykit/Security_kit/password_kit/: Scoring_password.py  Time_based_password.py  __init__.py  password.py
src/allykit/Tools_kit/: WorkFileJson.py  __init.py  __init__.py  file_tools.py  string_tools.py
src/allykit/data_kit/: IRAN.py  Language.py  country.py
src/allykit/data_kit/IRAN/: __init__.py  education.py  geography.py  historical.py  telecom.py
src/allykit/web_kit/: CChrome.py  Communications.py  Cookie.py  Elastic_bands.py  Get_Code.py  WebAutomation.py  Working_with_code.py  __init__.py
